@startuml

title __TRIGGER's Class Diagram__\n

  namespace com.showcontrol4j.trigger {
    interface com.showcontrol4j.trigger.ShowTrigger {
        {abstract} + getId()
        {abstract} + getName()
    }
  }
  

  namespace com.showcontrol4j.trigger {
    abstract class com.showcontrol4j.trigger.ShowTriggerBase {
        # ID : Long
        # NAME : String
        - channel : Channel
        - syncTimeout : Long
        + ShowTriggerBase()
        + getId()
        + getName()
        # sendGoMessage()
        # sendIdleMessage()
        # sendStopMessage()
        {abstract} # startListener()
        - registerShowTrigger()
    }
  }
  

  com.showcontrol4j.trigger.ShowTriggerBase .up.|> com.showcontrol4j.trigger.ShowTrigger
  com.showcontrol4j.trigger.ShowTriggerBase o-- com.showcontrol4j.broker.BrokerConnectionFactory : brokerConnectionFactory
  com.showcontrol4j.trigger.ShowTriggerBase o-- com.showcontrol4j.exchange.MessageExchange : messageExchange


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
